--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.3",
